Cada gimnasio vincula su Mercado Pago y cobra las suscripciones en su cuenta